# jitterbug

./: dune-project  jitterbug.opam
lib/: dune  jitterbug.ml
test/: dune
